# lichess-bigquery

./: .gitignore  .jvmopts  README.md  bq_nested_example.sql  build.sbt  game_schema.json  main.py  move_schema.json  moves.proto  moves_pb2.py  process_pgn.py  process_staging.py  pyproject.toml  requirements.txt  scala_move_requirements.txt  split_pgn.py
scripts/: fix_data_types.py  split_pgn.py
src/main/scala/: BigQueryLoader.scala  GcsFileManager.scala  GcsFileUploader.scala  Main.scala  ParsePgn.scala  PubSubSubscriber.scala
