[tool.poetry]
name = "lichess-bigquery"
version = "0.1.0"
description = ""
authors = ["Greg Finley <gregory.finley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
torrentp = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
