[tool.poetry]
name = "lichess-bigquery"
version = "0.1.0"
description = ""
authors = ["Greg Finley <gregory.finley@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
google-cloud-storage = "^2.7.0"
google-cloud-bigquery = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
